리팩터링: 테스트 코드 및 기타 리팩터링
테스트 코드 Spring Data Jpa & QueryDSL에 맞게 리팩터링
기존 누락되었던 테스트 코드 추가

파라미터로 page, size 넘기던 것들 Pageable 객체 넘기도록 수정

기타 테스트 코드 작성 중 발견된 자잘한 버그 수정