@@ -1,21 +1,22 @@
 package com.devpedia.watchapedia.service;
 
+import com.devpedia.watchapedia.builder.ParticipantMother;
 import com.devpedia.watchapedia.domain.Participant;
 import com.devpedia.watchapedia.dto.ParticipantDto;
 import com.devpedia.watchapedia.exception.EntityNotExistException;
-import com.devpedia.watchapedia.repository.ParticipantRepository;
-import org.junit.jupiter.api.MethodOrderer;
+import com.devpedia.watchapedia.repository.participant.ParticipantRepository;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.TestMethodOrder;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
@@ -23,7 +24,6 @@ import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
-@TestMethodOrder(MethodOrderer.Alphanumeric.class)
 class ParticipantServiceTest {
 
     @InjectMocks
@@ -31,7 +31,6 @@ class ParticipantServiceTest {
 
     @Mock
     private ParticipantRepository participantRepository;
-
     @Mock
     private S3Service s3Service;
 
@@ -74,17 +73,13 @@ class ParticipantServiceTest {
     @Test
     public void searchWithPaging_ParticipantWithoutImage_ReturnList() throws Exception {
         // given
-        Participant participant = Participant.builder()
-                .name("name")
-                .job("job")
-                .description("desc")
-                .profileImage(null)
-                .build();
-        given(participantRepository.searchWithPaging(anyString(), anyInt(), anyInt()))
-                .willReturn(Collections.singletonList(participant));
+        Participant participant = ParticipantMother.defaultParticipant("배우").build();
+
+        given(participantRepository.findByNameContaining(anyString(), any(Pageable.class)))
+                .willReturn(List.of(participant));
 
         // when
-        List<ParticipantDto.ParticipantInfo> list = participantService.searchWithPaging("", 1, 5);
+        List<ParticipantDto.ParticipantInfo> list = participantService.searchWithPaging("p", PageRequest.of(0, 10));
 
         // then
         assertThat(list).hasSize(1);
@@ -99,15 +94,10 @@ class ParticipantServiceTest {
                 .description("modDesc")
                 .build();
 
-        Participant participant = Participant.builder()
-                .name("name")
-                .job("job")
-                .description("desc")
-                .profileImage(null)
-                .build();
+        Participant participant = ParticipantMother.defaultParticipant("배우").build();
 
         given(participantRepository.findById(anyLong()))
-                .willReturn(participant);
+                .willReturn(Optional.of(participant));
 
         // when
         participantService.update(1L, request);
@@ -127,7 +117,7 @@ class ParticipantServiceTest {
                 .build();
 
         given(participantRepository.findById(anyLong()))
-                .willReturn(null);
+                .willReturn(Optional.empty());
 
         // when
         Throwable throwable = catchThrowable(() -> participantService.update(1L, request));
@@ -139,15 +129,10 @@ class ParticipantServiceTest {
     @Test
     public void delete_ExistId_Delete() throws Exception {
         // given
-        Participant participant = Participant.builder()
-                .name("name")
-                .job("job")
-                .description("desc")
-                .profileImage(null)
-                .build();
+        Participant participant = ParticipantMother.defaultParticipant("배우").build();
 
         given(participantRepository.findById(anyLong()))
-                .willReturn(participant);
+                .willReturn(Optional.of(participant));
 
         // when
         participantService.delete(1L);
@@ -160,7 +145,7 @@ class ParticipantServiceTest {
     public void delete_NotExistId_ThrowException() throws Exception {
         // given
         given(participantRepository.findById(anyLong()))
-                .willReturn(null);
+                .willReturn(Optional.empty());
 
         // when
         Throwable throwable = catchThrowable(() -> participantService.delete(1L));
